# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//base/security/device_auth/deps_adapter/deviceauth_hals.gni")
import("//base/security/device_auth/services/deviceauth.gni")

module_output_path = "device_auth/device_auth"

ohos_unittest("AiCommonLibTest") {
  module_out_path = module_output_path

  include_dirs = inc_path
  include_dirs += hals_inc_path

  include_dirs += [
    "${common_lib_path}/interfaces",
    "${os_adapter_path}/impl/src",
  ]

  sources = [
    "${common_lib_path}/impl/src/hc_types.c",
    "${common_lib_path}/impl/src/hc_parcel.c",
    "${common_lib_path}/impl/src/hc_string.c",
    "${common_lib_path}/impl/src/hc_string_vector.c",
    "${common_lib_path}/impl/src/hc_time.c",
    "${common_lib_path}/impl/src/hc_tlv_parser.c",
    "${common_lib_path}/impl/src/hc_mutex.c",
    "${common_lib_path}/impl/src/json_utils.c",
    "${common_lib_path}/impl/src/string_util.c",
    "${common_lib_path}/impl/src/uint8buff_utils.c",
    "${os_adapter_path}/impl/src/hc_log.c",
    "${os_adapter_path}/impl/src/linux/hc_file.c",
    "${os_adapter_path}/impl/src/hc_err_trace.c",
    "source/hc_mutex_mock.c",
  ]

  sources += [
    "source/hc_types_test.cpp",
    "source/hc_time_test.cpp",
    "source/hc_parcel_test.cpp",
    "source/hc_string_test.cpp",
    "source/hc_string_vector_test.cpp",
    "source/hc_mutex_test.cpp",
    "source/uint8buff_utils_test.cpp",
    "source/string_util_test.cpp",
    "source/json_utils_test.cpp",
    "source/hc_tlv_parser_test.cpp",
  ]

  defines = [
    "HILOG_ENABLE",
  ]

  ldflags = [
    "-Wl,--wrap=pthread_mutex_init",
    "-Wl,--wrap=pthread_mutex_lock",
    "-Wl,--wrap=pthread_mutex_unlock",
    "-Wl,--wrap=pthread_mutex_destroy",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
}
