# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with License.
# You may obtain a copy of License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

group("common_lib_tests") {
  testonly = true
  deps = [
    "hc_types:hc_types_test",
    "hc_string:hc_string_test",
    "hc_parcel:hc_parcel_test",
    "hc_string_vector:hc_string_vector_test",
    "hc_time:hc_time_test",
    "hc_tlv_parser:hc_tlv_parser_test",
    "hc_mutex:hc_mutex_test",
    "uint8buff_utils:uint8buff_utils_test",
    "string_util:string_util_test",
    "json_utils:json_utils_test",
  ]
}

group("common_lib_tests_fast") {
  testonly = true
  deps = [
    "hc_types:hc_types_test",
    "hc_string:hc_string_test",
    "hc_mutex:hc_mutex_test",
  ]
}

group("AiCommonLibTest") {
  testonly = true
  deps = [ ":common_lib_tests" ]
}
