# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "device_auth/deviceauth_test"

##############################fuzztest##########################################
ohos_fuzztest("IstrustpeerFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/security/device_auth/frameworks/deviceauth_lite/fuzztest/istrustpeer_fuzzer"
  include_dirs = []
  include_dirs += [
    "//base/security/device_auth/interfaces/inner_api/deviceauth_lite",
    "//base/security/device_auth/frameworks/deviceauth_lite/source/schdeule",
    "//base/security/device_auth/frameworks/deviceauth_lite/source/key_agreement",
    "//base/security/device_auth/frameworks/deviceauth_lite/source/base",
    "//base/security/device_auth/frameworks/deviceauth_lite/source/struct",
    "//third_party/bounds_checking_function/include",
    "//base/security/device_auth/frameworks/deviceauth_lite/source/json",
  ]
    cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
    cflags_cc = [
    "--coverage",
  ]

    ldflags = [
    "--coverage",
  ]

    sources = [ 
      "startpake_fuzzer.cpp", 
    ]
    deps = [
        "//third_party/bounds_checking_function:libsec_shared",
        "//base/security/device_auth/frameworks/deviceauth_lite/source:hichainsdk",
    ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":IstrustpeerFuzzTest",
  ]
}
###############################################################################
