# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

ROOT_PATH = "//base/security/device_auth"
THIRD_PATH = "//third_party/bounds_checking_function"
module_output_path = "device_auth/deviceauth_test"

##############################fuzztest##########################################
ohos_fuzztest("ListTrustPeerFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$ROOT_PATH/frameworks/deviceauth_lite/fuzztest/istrustpeer_fuzzer"
  include_dirs = []
  include_dirs += [
    "$ROOT_PATH/interfaces/inner_api/deviceauth_lite",
    "$ROOT_PATH/frameworks/deviceauth_lite/source/schdeule",
    "$ROOT_PATH/frameworks/deviceauth_lite/source/key_agreement",
    "$ROOT_PATH/frameworks/deviceauth_lite/source/base",
    "$ROOT_PATH/frameworks/deviceauth_lite/source/struct",
    "$THIRD_PATH/include",
    "$ROOT_PATH/frameworks/deviceauth_lite/source/json",
  ]
    cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "--coverage",
  ]

    ldflags = [
    "--coverage",
  ]

    sources = [ 
      "listtrustpeer_fuzzer.cpp", 
    ]
    deps = [
        "$THIRD_PATH:libsec_shared",
        "$ROOT_PATH/frameworks/deviceauth_lite/source:hichainsdk",
    ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ListTrustPeerFuzzTest",
  ]
}
###############################################################################
